5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1716_2507.log
== SUBMITION (2019-05-15 23:21:12) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.176362
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:21:14) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.129765
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:22:48) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.208318
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:22:48) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.325174
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:22:48) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.428142
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
ZERO
6
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
5
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:22:49) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.113456
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:22:49) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.185032
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
ZERO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
MAXIMO
5
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:22:50) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.243535
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
ZERO
6
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:22:50) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.311694
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
5
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:22:50) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.273285
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
ZERO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
MAXIMO
5
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:22:51) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.419022
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
ZERO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:

-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:22:51) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.536264
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:22:51) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.334188
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2507/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:22:51) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.588327
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2507/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:22:52) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.670158
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:22:52) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.483466
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
ZERO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:

-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:22:52) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.458914
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2507/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:22:53) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.346883
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
ZERO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
5
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:22:53) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.483034
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
ZERO
6
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:22:53) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.470234
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2507/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:23:13) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = c1 * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.168254
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
10
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:23:14) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = c1 * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- OUTPUT:
MAXIMO
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:23:32) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = c1 * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.144585
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
10
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:23:41) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 <= fish <= 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.242462
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:25:35) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 < fish < 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.178891
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:25:35) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 < fish < 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:25:42) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 < fish < 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.171014
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:30:02) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 < fish < 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:30:51) 
-- CODE:
fish = int(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 < fish < 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.192032
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:30:56) 
-- CODE:
fish = int(input())
perc = float(input())
ret = int(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 < fish < 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.137167
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:33:43) 
-- CODE:
qnt = float(input())
perc = float(input())
ret = float(input())
mes = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	mes += 1
if(qnt <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
print(ano)
-- EXECUTION TIME:
0.192
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 17, in <module>
    print(ano)
NameError: name 'ano' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:33:48) 
-- CODE:
qnt = float(input())
perc = float(input())
ret = float(input())
mes = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	mes += 1
if(qnt <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
print(ano)
-- EXECUTION TIME:
0.18146
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 17, in <module>
    print(ano)
NameError: name 'ano' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:33:48) 
-- CODE:
qnt = float(input())
perc = float(input())
ret = float(input())
mes = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	mes += 1
if(qnt <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
print(ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(ano)
NameError: name 'ano' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:34:04) 
-- CODE:
qnt = float(input())
perc = float(input())
ret = float(input())
mes = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	mes += 1
if(qnt <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)

-- EXECUTION TIME:
0.128494
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
6
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:34:05) 
-- CODE:
qnt = float(input())
perc = float(input())
ret = float(input())
mes = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	mes += 1
if(qnt <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)

-- EXECUTION TIME:
0.152296
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
6
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:34:06) 
-- CODE:
qnt = float(input())
perc = float(input())
ret = float(input())
mes = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	mes += 1
if(qnt <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)

-- OUTPUT:
MAXIMO
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:34:14) 
-- CODE:
qnt = float(input())
perc = float(input())
ret = float(input())
mes = 0
f = perc/100
while 0 < qnt < 12000:
	acre = qnt * f
	qnt = acre + qnt
	qnt = qnt - ret
	mes += 1
if(qnt <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)

-- OUTPUT:
MAXIMO
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:36:13) 
-- CODE:
fish = int(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 < fish < 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.154732
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:37:05) 
-- CODE:
fish = int(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 < fish < 8000:
	acr = c1 * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.162105
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
10
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:37:08) 
-- CODE:
fish = int(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 < fish < 8000:
	acr = c1 * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
	print(mes)
else:
	print("MAXIMO")
	print(mes)
-- EXECUTION TIME:
0.177703
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
10
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:39:01) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 < fish < 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
else:
	print("MAXIMO")
print(mes)
-- EXECUTION TIME:
0.161921
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:39:03) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 < fish < 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
else:
	print("MAXIMO")
print(mes)
-- EXECUTION TIME:
0.206346
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:39:04) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 < fish < 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
else:
	print("MAXIMO")
print(mes)
-- EXECUTION TIME:
0.185238
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
MAXIMO
5
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
6
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:39:04) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 < fish < 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
else:
	print("MAXIMO")
print(mes)
-- EXECUTION TIME:
0.143782
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:39:11) 
-- CODE:
fish = float(input())
perc = float(input())
ret = float(input())
mes = 0
c1 = fish
c2 = perc/100

while 0 < fish < 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
else:
	print("MAXIMO")
print(mes)
-- EXECUTION TIME:
0.170435
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:46:04) 
-- CODE:
fish = int(input())
perc = int(input())
ret = int(input())
ret2 = int(input())
ret3 = int(input())
mes = 0
c2 = perc/100

while 0 < fish < 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	fish = fish - ret2
	fish = fish - ret3
	mes += 1
if (fish <= 0):
	print("ZERO")
else:
	print("MAXIMO")
print(mes)
-- EXECUTION TIME:
0.211985
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
1
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
2
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:46:06) 
-- CODE:
fish = int(input())
perc = int(input())
ret = int(input())
ret2 = int(input())
ret3 = int(input())
mes = 0
c2 = perc/100

while 0 < fish < 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	fish = fish - ret2
	fish = fish - ret3
	mes += 1
if (fish <= 0):
	print("ZERO")
else:
	print("MAXIMO")
print(mes)
-- EXECUTION TIME:
0.218921
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
1
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
2
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:46:06) 
-- CODE:
fish = int(input())
perc = int(input())
ret = int(input())
ret2 = int(input())
ret3 = int(input())
mes = 0
c2 = perc/100

while 0 < fish < 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	fish = fish - ret2
	fish = fish - ret3
	mes += 1
if (fish <= 0):
	print("ZERO")
else:
	print("MAXIMO")
print(mes)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:46:10) 
-- CODE:
fish = int(input())
perc = int(input())
ret = int(input())
ret2 = int(input())
ret3 = int(input())
mes = 0
c2 = perc/100

while 0 < fish < 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	fish = fish - ret2
	fish = fish - ret3
	mes += 1
if (fish <= 0):
	print("ZERO")
else:
	print("MAXIMO")
print(mes)
-- EXECUTION TIME:
0.301599
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
1
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
2
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:46:13) 
-- CODE:
fish = int(input())
perc = int(input())
ret = int(input())
ret2 = int(input())
ret3 = int(input())
mes = 0
c2 = perc/100

while 0 < fish < 8000:
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	fish = fish - ret2
	fish = fish - ret3
	mes += 1
if (fish <= 0):
	print("ZERO")
else:
	print("MAXIMO")
print(mes)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:47:32) 
-- CODE:
fish = int(input())
perc = int(input())
ret = int(input())
mes = 0
c2 = perc/100

while 0 < fish < 8000:
	ret
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
else:
	print("MAXIMO")
print(mes)
-- EXECUTION TIME:
0.162917
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:47:45) 
-- CODE:
fish = int(input())
perc = int(input())
mes = 0
c2 = perc/100

while 0 < fish < 8000:
	ret = int(input())
	acr = fish * c2
	fish = fish + acr
	fish = fish - ret
	mes += 1
if (fish <= 0):
	print("ZERO")
else:
	print("MAXIMO")
print(mes)
-- EXECUTION TIME:
0.165981
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
